added post function

--- a/Server/Untitled.ipynb
+++ b/Server/Untitled.ipynb
@@ -41,6 +41,18 @@
       "application/x-www-form-urlencoded\n",
       "post done\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [23/Jan/2018 21:54:48] \"GET /files/ HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 21:54:48] \"GET /files/css/style.css HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 21:54:49] \"GET /files/js/jquery-3.3.1.min.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 21:54:49] \"GET /files/js/script.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 21:54:49] \"GET /files/img/nba.jpg HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 21:54:49] \"GET /files/data/jsonSchools.JSON HTTP/1.1\" 200 -\n"
+     ]
     }
    ],
    "source": [
