--- a/Server/Untitled.ipynb
+++ b/Server/Untitled.ipynb
@@ -16,15 +16,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [23/Jan/2018 19:30:53] \"GET /files/ HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [23/Jan/2018 19:30:54] \"GET /files/js/script.js HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [23/Jan/2018 19:36:14] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 19:36:14] code 404, message File not found\n",
+      "127.0.0.1 - - [23/Jan/2018 19:36:14] \"GET /favicon.ico HTTP/1.1\" 404 -\n",
+      "127.0.0.1 - - [23/Jan/2018 19:36:16] \"GET /files/ HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 19:36:16] \"GET /files/css/style.css HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 19:36:16] \"GET /files/js/script.js HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_io.BufferedReader name=1424>\n",
+      "<_io.BufferedReader name=608>\n",
       "Host: localhost:8000\n",
       "Connection: keep-alive\n",
       "Content-Length: 10\n",
@@ -35,11 +39,24 @@
       "Referer: http://localhost:8000/files/\n",
       "Accept-Encoding: gzip, deflate, br\n",
       "Accept-Language: nl-NL,nl;q=0.9,en-US;q=0.8,en;q=0.7\n",
-      "Cookie: Webstorm-3c52dca5=87c97e5b-60f8-45c2-b696-79754aa96fe7; Webstorm-a4340984=94be9f80-829c-4a1a-b81f-e1ee593094ea; _xsrf=2|83cf2f80|95fed655e93c928fe83ba04088cc5956|1516540999; username-localhost-8888=\"2|1:0|10:1516728701|23:username-localhost-8888|44:MjgwYmU0Yzg1Nzk4NDg1NDgwMjViZTgwYWIwM2U5NzU=|9358616745fa86331af68378648f6cd7793db0345351ae76e8edf7efc5079f97\"\n",
+      "Cookie: io=v-m-zHA8Nhv5vN00AAA7; username-localhost-8888=\"2|1:0|10:1516732536|23:username-localhost-8888|44:OTk2MDg3YjMyMGQzNGRlYmJiY2U0MTRkMzcwMDJkMmY=|c518303312b238befcbe395f1a6c566b0a82f3b507c60e9eb263a2a9e2d8278e\"; _xsrf=2|399bb066|2db42e3d1b9281de563a4da136d77e4e|1516732536\n",
       "\n",
       "\n",
       "application/x-www-form-urlencoded\n",
       "post done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [23/Jan/2018 19:36:16] \"GET /files/img/background.jpg HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 19:37:22] \"GET /files/ HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 19:37:22] \"GET /files/js/jquery-3.3.1.min.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 19:37:22] \"GET /files/css/style.css HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 19:37:22] \"GET /files/js/script.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 19:37:22] \"GET /files/img/nba.jpg HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 19:37:22] \"GET /files/data/jsonSchools.JSON HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -107,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
