added some post functionality

--- a/Server/Untitled.ipynb
+++ b/Server/Untitled.ipynb
@@ -16,42 +16,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [23/Jan/2018 19:30:53] \"GET /files/ HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [23/Jan/2018 19:30:54] \"GET /files/js/script.js HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [23/Jan/2018 22:26:04] \"GET /files/?school=Abilene+Christian+Wildcats HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_io.BufferedReader name=1424>\n",
-      "Host: localhost:8000\n",
-      "Connection: keep-alive\n",
-      "Content-Length: 10\n",
-      "Origin: http://localhost:8000\n",
-      "User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/63.0.3239.132 Safari/537.36\n",
-      "Content-type: application/x-www-form-urlencoded\n",
-      "Accept: */*\n",
-      "Referer: http://localhost:8000/files/\n",
-      "Accept-Encoding: gzip, deflate, br\n",
-      "Accept-Language: nl-NL,nl;q=0.9,en-US;q=0.8,en;q=0.7\n",
-      "Cookie: Webstorm-3c52dca5=87c97e5b-60f8-45c2-b696-79754aa96fe7; Webstorm-a4340984=94be9f80-829c-4a1a-b81f-e1ee593094ea; _xsrf=2|83cf2f80|95fed655e93c928fe83ba04088cc5956|1516540999; username-localhost-8888=\"2|1:0|10:1516728701|23:username-localhost-8888|44:MjgwYmU0Yzg1Nzk4NDg1NDgwMjViZTgwYWIwM2U5NzU=|9358616745fa86331af68378648f6cd7793db0345351ae76e8edf7efc5079f97\"\n",
-      "\n",
-      "\n",
-      "application/x-www-form-urlencoded\n",
-      "post done\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [23/Jan/2018 21:54:48] \"GET /files/ HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [23/Jan/2018 21:54:48] \"GET /files/css/style.css HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [23/Jan/2018 21:54:49] \"GET /files/js/jquery-3.3.1.min.js HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [23/Jan/2018 21:54:49] \"GET /files/js/script.js HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [23/Jan/2018 21:54:49] \"GET /files/img/nba.jpg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [23/Jan/2018 21:54:49] \"GET /files/data/jsonSchools.JSON HTTP/1.1\" 200 -\n"
+      "{b'data': [b'hello']}\n",
+      "{b'data': [b'hello']}\n"
      ]
     }
    ],
@@ -59,25 +32,17 @@
     "import http.server\n",
     "import socketserver\n",
     "import cgi\n",
+    "from urllib.parse import urlparse, parse_qs\n",
     "\n",
     "port = 8000\n",
     "\n",
     "class Handler(http.server.SimpleHTTPRequestHandler):\n",
     "    def do_POST(self):\n",
+    "        length = int(self.headers.get('content-length'))\n",
+    "        field_data = self.rfile.read(length)\n",
+    "        fields = parse_qs(field_data)\n",
+    "        print(fields)\n",
     "        \n",
-    "        print(self.rfile)\n",
-    "        print(self.headers)\n",
-    "        print(self.headers[\"Content-Type\"])\n",
-    "        \n",
-    "        form = cgi.FieldStorage(\n",
-    "            fp=self.rfile, \n",
-    "            headers=self.headers,\n",
-    "            environ={'REQUEST_METHOD':'POST',\n",
-    "                     'CONTENT_TYPE':self.headers['Content-Type'],\n",
-    "                     })\n",
-    "        print(\"post done\")\n",
-    "        \n",
-    "\n",
     "httpd = socketserver.TCPServer((\"\",port), Handler)\n",
     "print(\"Server at PORT: \", port)\n",
     "httpd.serve_forever()\n",
