--- a/Server/Untitled.ipynb
+++ b/Server/Untitled.ipynb
@@ -9,14 +9,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Server at PORT:  8000\n"
+      "Server at PORT:  8080\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [23/Jan/2018 22:26:04] \"GET /files/?school=Abilene+Christian+Wildcats HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [23/Jan/2018 22:38:10] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 22:38:12] \"GET /files/ HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 22:38:12] \"GET /files/css/style.css HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 22:38:12] \"GET /files/js/jquery-3.3.1.min.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 22:38:12] \"GET /files/js/script.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 22:38:13] \"GET /files/data/jsonSchools.JSON HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 22:38:13] \"GET /files/img/nba.jpg HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{b'data': [b'hello']}\n",
+      "{b'data': [b'hello']}\n",
+      "{b'data': [b'hello']}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [23/Jan/2018 22:38:49] \"GET /files/css/style.css HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{b'data': [b'hello']}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [23/Jan/2018 22:41:09] \"GET /files/ HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 22:41:09] \"GET /files/css/style.css HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 22:41:09] \"GET /files/js/jquery-3.3.1.min.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 22:41:09] \"GET /files/js/script.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 22:41:09] \"GET /files/img/nba.jpg HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 22:41:10] \"GET /files/data/jsonSchools.JSON HTTP/1.1\" 200 -\n"
      ]
     },
     {
@@ -34,7 +75,7 @@
     "import cgi\n",
     "from urllib.parse import urlparse, parse_qs\n",
     "\n",
-    "port = 8000\n",
+    "port = 8080\n",
     "\n",
     "class Handler(http.server.SimpleHTTPRequestHandler):\n",
     "    def do_POST(self):\n",
@@ -84,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
