--- a/Server/Untitled.ipynb
+++ b/Server/Untitled.ipynb
@@ -10,33 +10,34 @@
      "output_type": "stream",
      "text": [
       "[]\n",
-      "Server at PORT:  8000\n"
+      "Server at PORT:  8080\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [23/Jan/2018 22:58:26] \"GET /files/ HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [23/Jan/2018 22:58:26] \"GET /files/css/style.css HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [23/Jan/2018 22:58:26] \"GET /files/js/jquery-3.3.1.min.js HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [23/Jan/2018 22:58:26] \"GET /files/js/script.js HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [23/Jan/2018 22:58:26] \"GET /files/img/nba.jpg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [23/Jan/2018 22:58:27] \"GET /files/data/jsonSchools.JSON HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [23/Jan/2018 23:07:11] \"GET /Untitled.ipynb HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 23:07:12] \"GET /files/ HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 23:07:13] \"GET /files/css/style.css HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 23:07:13] \"GET /files/js/jquery-3.3.1.min.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 23:07:13] \"GET /files/js/script.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 23:07:13] \"GET /files/data/jsonSchools.JSON HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Jan/2018 23:07:13] \"GET /files/img/nba.jpg HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['hello', 'hello2']\n"
+      "['hello,G=hello,MP=hello,PTS=hello,TRB=hello,AST=hello,STL=hello,BLK=hello,FG%=hello,2P%=hello,3P%=hello,FT%=hello,WS=hello,WS=hello']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [23/Jan/2018 22:58:29] \"POST /files/ HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [23/Jan/2018 23:07:16] \"POST /files/ HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -46,7 +47,7 @@
     "import cgi\n",
     "from urllib.parse import urlparse, parse_qs\n",
     "\n",
-    "port = 8000\n",
+    "port = 8080\n",
     "bballarray = []\n",
     "\n",
     "class Handler(http.server.SimpleHTTPRequestHandler):\n",
@@ -100,18 +101,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.3"
   }
  },
  "nbformat": 4,
