--- a/Server/Untitled.ipynb
+++ b/Server/Untitled.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "% matplotlib inline\n",
@@ -1961,7 +1963,7 @@
     "import cgi\n",
     "from urllib.parse import urlparse, parse_qs\n",
     "\n",
-    "port = 8000\n",
+    "port = 8080\n",
     "bballarray = []\n",
     "\n",
     "class Handler(http.server.SimpleHTTPRequestHandler):\n",
@@ -2024,6 +2026,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
